--- a/angularHEFE/package.json
+++ b/angularHEFE/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "~10.0.4",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.0.4",
     "@angular/material": "github:angular/material2-builds",
     "@angular/platform-browser": "~10.0.4",
@@ -24,10 +25,13 @@
     "@popperjs/core": "^2.4.4",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "@sweetalert2/themes": "^3.2.0",
+    "aframe": "^1.0.4",
+    "aframe-layout-component": "^5.3.0",
+    "aframe-proxy-event-component": "^2.1.0",
     "angularfire2": "^5.4.2",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.5.2",
-    "firebase": "^7.17.1",
+    "firebase": "^7.19.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "nodemailer": "^6.4.11",
