--- a/angularHEFE/package.json
+++ b/angularHEFE/package.json
@@ -34,6 +34,7 @@
     "firebase": "^7.19.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "moment": "^2.27.0",
     "nodemailer": "^6.4.11",
     "rxjs": "~6.5.5",
     "sweetalert2": "^9.17.1",
