--- a/angularHEFE/package.json
+++ b/angularHEFE/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@ctrl/ngx-emoji-mart": "^4.0.2",
     "@popperjs/core": "^2.4.4",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "@sweetalert2/themes": "^3.2.0",
