--- a/angularHEFE/package.json
+++ b/angularHEFE/package.json
@@ -36,10 +36,12 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "moment": "^2.27.0",
+    "ngx-emoji-picker": "^0.1.6",
     "nodemailer": "^6.4.11",
     "rxjs": "~6.5.5",
     "sweetalert2": "^9.17.1",
     "tslib": "^2.0.0",
+    "twemoji": "^13.0.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
