--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "crypto": "^1.0.1",
     "experss": "0.0.1-security",
     "express": "^4.17.1",
+    "fs-extra": "^9.0.1",
     "handlebars": "^4.7.6",
     "handlebars-helpers": "^0.10.0",
     "mongoose": "^5.10.0",
