--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.4.2",
     "ngx-auth-firebaseui": "^4.4.0",
     "nodemailer": "^6.4.11",
+    "nodemailer-express-handlebars": "^4.0.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {},
