--- a/angularHEFE/package.json
+++ b/angularHEFE/package.json
@@ -54,6 +54,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "eslint-plugin-sonarjs": "^0.5.0",
     "firebase-tools": "^7.12.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
