--- a/angularHEFE/package.json
+++ b/angularHEFE/package.json
@@ -27,6 +27,7 @@
     "@popperjs/core": "^2.4.4",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "@sweetalert2/themes": "^3.2.0",
+    "@types/three": "^0.103.2",
     "aframe": "^1.0.4",
     "aframe-layout-component": "^5.3.0",
     "aframe-proxy-event-component": "^2.1.0",
@@ -41,6 +42,7 @@
     "nodemailer": "^6.4.11",
     "rxjs": "~6.5.5",
     "sweetalert2": "^9.17.1",
+    "three": "^0.121.1",
     "tslib": "^2.0.0",
     "twemoji": "^13.0.1",
     "zone.js": "~0.10.3"
@@ -50,6 +52,7 @@
     "@angular-devkit/build-angular": "~0.1000.3",
     "@angular/cli": "~10.0.3",
     "@angular/compiler-cli": "~10.0.4",
+    "@types/aframe": "^1.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
