--- a/angularHEFE/package.json
+++ b/angularHEFE/package.json
@@ -27,6 +27,7 @@
     "@popperjs/core": "^2.4.4",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "@sweetalert2/themes": "^3.2.0",
+    "@types/howler": "^2.2.1",
     "@types/three": "^0.103.2",
     "aframe": "^1.0.4",
     "aframe-layout-component": "^5.3.0",
@@ -37,6 +38,7 @@
     "firebase": "^7.19.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "howler": "^2.2.0",
     "moment": "^2.27.0",
     "ngx-emoji-picker": "^0.1.6",
     "nodemailer": "^6.4.11",
