Arreglado bugs pero no jala :(

--- a/angularHEFE/firebase.json
+++ b/angularHEFE/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/angularHEFE",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
